--- a/Simulation/appsettings.json
+++ b/Simulation/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DbConnection" : "mongodb://localhost/SMART"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
