oop and controller fixes

--- a/Simulation/Simulation.csproj
+++ b/Simulation/Simulation.csproj
@@ -7,6 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Runners\**" />
+    <Content Remove="Runners\**" />
+    <EmbeddedResource Remove="Runners\**" />
+    <None Remove="Runners\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="JetBrains.Annotations" Version="2025.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.7" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
     <PackageReference Include="MongoDB.Bson" Version="3.4.2" />
@@ -19,10 +27,6 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Runners\" />
   </ItemGroup>
 
 </Project>
