--- a/Simulation/Simulation.csproj
+++ b/Simulation/Simulation.csproj
@@ -13,6 +13,8 @@
   <ItemGroup>
     <PackageReference Include="JetBrains.Annotations" Version="2025.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.7" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="10.0.0-preview.6.25358.103" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="10.0.0-preview.6.25358.103" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.4-beta1" />
     <PackageReference Include="Quartz" Version="3.14.0" />
@@ -20,8 +22,5 @@
     <PackageReference Include="Quartz.Extensions.Hosting" Version="3.14.0" />
     <PackageReference Include="Serilog" Version="4.3.1-dev-02373" />
     <PackageReference Include="Serilog.Sinks.Console" Version="6.0.1-dev-00953" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Files\ICD\" />
   </ItemGroup>
 </Project>
