--- a/Simulation/appsettings.json
+++ b/Simulation/appsettings.json
@@ -1,7 +1,7 @@
 {
-  "ConnectionStrings": {
-    "DbConnection" : "mongodb://localhost/SMART"
-  },
+   "ICD": {
+      "ICDFilePath": "Files/ICD/"
+   }, 
   "Logging": {
     "LogLevel": {
       "Default": "Information",
