shared as a class library

--- a/Simulation/appsettings.json
+++ b/Simulation/appsettings.json
@@ -1,9 +1,12 @@
-{ 
+{
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ICD": {
+    "ICDFilePath": "../Shared/Shared/Files/ICD/"
   },
   "AllowedHosts": "*"
 }
