fixed icd file path

--- a/Simulation/appsettings.json
+++ b/Simulation/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ICD": {
-    "ICDFilePath": "../Shared/Shared/Files/ICD/"
+    "ICDFilePath": "../../Shared/Shared/Files/ICD/"
   },
   "AllowedHosts": "*"
 }
