feat: Define constants and configuration for Telemetry Device Service

--- a/Simulation/appsettings.json
+++ b/Simulation/appsettings.json
@@ -8,5 +8,8 @@
   "ICD": {
     "ICDFilePath": "../../Core/Core/Files/ICD/"
   },
+  "TelemetryDevice": {
+    "BaseUrl": "http://localhost:5084"
+  },
   "AllowedHosts": "*"
 }
