[minor] call mission service on mission end

--- a/Simulation/appsettings.json
+++ b/Simulation/appsettings.json
@@ -11,5 +11,8 @@
   "TelemetryDevice": {
     "BaseUrl": "http://localhost:5084"
   },
+  "MissionService": {
+    "BaseUrl": "http://localhost:5000"
+  },
   "AllowedHosts": "*"
 }
