[feat] uav storage

--- a/Simulation/appsettings.json
+++ b/Simulation/appsettings.json
@@ -14,5 +14,8 @@
   "MissionService": {
     "BaseUrl": "http://localhost:5224"
   },
+  "DeviceManager": {
+    "BaseUrl": "http://localhost:5026"
+  },
   "AllowedHosts": "*"
 }
