--- a/Simulation/Simulation.csproj
+++ b/Simulation/Simulation.csproj
@@ -26,4 +26,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Core\Core.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Ro\Lts\" />
+  </ItemGroup>
 </Project>
